<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_2"
    tools:context=".app_blood_facts">

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="19dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/scrollView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            app:srcCompat="@drawable/back_button" />

        <TextView
            android:id="@+id/textView119"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10sp"
            android:paddingTop="0sp"
            android:text="Blood Donation Facts"
            android:textColor="@color/color_1"
            android:textSize="36sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView120"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:paddingStart="20sp"
                android:paddingEnd="20sp"
                android:text="@string/abf_1"
                android:textColor="@color/color_1"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView121"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:paddingStart="20sp"
                android:paddingEnd="20sp"
                android:text="@string/abf_2"
                android:textColor="@color/color_1"
                android:textSize="15sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/textView122"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:paddingStart="20sp"
                android:paddingEnd="20sp"
                android:text="@string/abf_3"
                android:textColor="@color/color_1"
                android:textSize="15sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/textView123"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:paddingStart="20sp"
                android:paddingEnd="10sp"
                android:text="@string/abf_4"
                android:textColor="@color/color_1"
                android:textSize="15sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/textView124"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:paddingStart="20sp"
                android:paddingEnd="20sp"
                android:text="@string/abf_5"
                android:textColor="@color/color_3"
                android:textSize="15sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/textView125"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:paddingStart="20sp"
                android:paddingEnd="10sp"
                android:text="@string/abf_6"
                android:textColor="@color/color_1"
                android:textSize="15sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/textView126"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:paddingStart="20sp"
                android:paddingEnd="10sp"
                android:text="@string/abf_7"
                android:textColor="@color/color_1"
                android:textSize="15sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/textView127"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:paddingStart="20sp"
                android:paddingEnd="10sp"
                android:text="@string/abf_8"
                android:textColor="@color/color_1"
                android:textSize="15sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/textView128"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:paddingStart="20sp"
                android:paddingEnd="10sp"
                android:text="@string/abf_9"
                android:textColor="@color/color_1"
                android:textSize="15sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/textView129"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:paddingStart="20sp"
                android:paddingEnd="10sp"
                android:text="@string/abf_10"
                android:textColor="@color/color_1"
                android:textSize="15sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/textView130"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:paddingStart="20sp"
                android:paddingEnd="10sp"
                android:text="@string/abf_11"
                android:textColor="@color/color_1"
                android:textSize="15sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/textView131"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="60dp"
                android:paddingStart="20sp"
                android:paddingEnd="10sp"
                android:text="@string/abf_12"
                android:textColor="@color/color_1"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>