<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_2"
    tools:context=".app_pin_verification">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="31dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="105dp"
        android:onClick="back_1_pressed"
        app:layout_constraintBottom_toTopOf="@+id/textView33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_button" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:text="@string/apv_01"
        android:textColor="@color/color_1"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView35"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="56dp"
        android:textColor="@color/color_1"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView36"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView33"
        app:layout_constraintTop_toBottomOf="@+id/textView33" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="184dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="12dp"
        android:text="@string/apv_03"
        android:textColor="@color/color_1"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumberPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView35" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="9dp"
        android:text="@string/apv_04"
        android:textColor="@color/color_1"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <EditText
        android:id="@+id/editTextNumberPassword"
        android:layout_width="159dp"
        android:layout_height="0dp"
        android:layout_marginBottom="69dp"
        android:background="@drawable/white_edit_text_background"
        android:ems="10"
        android:inputType="numberPassword"
        android:maxLength="4"
        android:paddingStart="20sp"
        android:paddingEnd="20sp"
        android:textColor="@color/color_2"
        android:textCursorDrawable="@color/color_2"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="@+id/textView36"
        app:layout_constraintTop_toBottomOf="@+id/textView36" />

    <Button
        android:id="@+id/button3"
        android:layout_width="128dp"
        android:layout_height="0dp"
        android:layout_marginBottom="219dp"
        android:background="@drawable/yellow_button_background"
        android:text="@string/apv_05"
        android:textAllCaps="false"
        android:textColor="@color/color_2"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView37"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>